src/pages/Suport/Suport.css
.paesani-suport-container {
    display: flex;
    flex-direction: column;
    margin-top: 5%;
    margin-bottom: 35px;
    width: 80%;
}

.paesani-suport-title {
    font-size: 2rem;
    font-weight: 700;
    color: var(--color1);
    border-left: 5px solid var(--color3);
    padding-left: 10px;
    margin-bottom: 30px;
}

.paesani-suport-content {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    width: 100%;
}

.paesani-suport-content form {
    border: 1px solid var(--color2);
    width: 50%;
    display: flex;
    flex-direction: column;
    padding: 20px;
    border-radius: 15px;

    h1 {
        text-align: center;
        font-size: 1.5rem;
        font-weight: 600;
        color: var(--color1);
        margin-bottom: 20px;
        margin-top: 20px;
    }

    label {
        font-size: 1.1rem;
        font-weight: 500;
        color: var(--color2);
        margin-bottom: 5px;
        margin-top: 10px;
    }

    input {
        padding: 15px;
        margin-bottom: 15px;
        border: 1px solid var(--color2);
        border-radius: 5px;
        font-size: 0.8rem;

        &::placeholder {
            font-size: 0.8rem;
        }
    }

    textarea {
        padding: 10px;
        margin-bottom: 15px;
        border: 1px solid var(--color2);
        border-radius: 5px;
        font-size: 0.8rem;
        resize: vertical;
        height: 150px;
    }

    .paesani-suport-form-buttons {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        margin-top: 8px;
    }
}

